Fix extra space appearing between ad and nav bar on resize.

--- a/wp-content/themes/twentythirteen-child/style.css
+++ b/wp-content/themes/twentythirteen-child/style.css
@@ -1474,7 +1474,7 @@ Social Media Buttons
 		margin: 0 auto;
 		max-width: 100%;
 		position: relative;
-		top: 20px;
+		top: 0px;
 		float: none;
 		margin: 0;
 		width: 100%;
